--- a/Calarasi/collection-new.html
+++ b/Calarasi/collection-new.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Calarasi - Single Performance</title>
+    <title>Calarasi - Collection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -92,36 +92,32 @@
     </div>
 </header>
 
+    <div class="page-title @@extraclass" style="background: url('img/title-image.jpg') 50% 50% / cover no-repeat;">
+    <div class="container">
+        <h1>Legenda</h1>
+    </div>
+</div>
     <main>
-        <h1 class="collection-title">IWSC Bronze 2021</h1>
-
+        
         <div class="collection-hero">
             <div class="container">
                 <div class="collection-hero__body">
-                    <img src="img/performance.png" alt="collection" class="collection-hero__image" data-aos="fade-right" data-aos-duration="1500">
+                    <img src="img/products.jpg" alt="collection" class="collection-hero__image" data-aos="fade-right" data-aos-duration="1500">
                     <div class="collection-hero__info collection-info" data-aos="fade-left" data-aos-duration="1500">
+                        <h1>Legenda</h1>
                         <p>
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit.
                         </p>
 
                         <div class="collection-info__block">
-                            <h5>Eveniment: <span>IWSC 2021</span></h5>
+                            <h5>Serie: <span>Legenda</span></h5>
                         </div>
                         <div class="collection-info__block">
-                            <h5>Anul: <span> 2021</span></h5>
+                            <h5>Grad alcoolic(%):<span>43</span></h5>
                         </div>
                         <div class="collection-info__block">
-                            <h5>Locatia: <span>Londra</span></h5>
-                        </div>
-
-                        <div class="collection-info__block">
-                            <h5>Winner:</h5>
-                            <ul class="collection-info__list">
-                                <li class="collection-info__item">Special collection 10 ani</li>
-                                <li class="collection-info__item">Special collection 7 ani</li>
-                                <li class="collection-info__item">Special collection 5 ani</li>
-                            </ul>
+                            <h5>Varsta:<span>10-15 ani</span></h5>
                         </div>
 
                         <a href="#" class="collection-info__link">
@@ -135,9 +131,9 @@
             </div>
         </div>
 
-        <div class="collection-description" data-aos="fade-right" data-aos-duration="1500">
+        <div class="collection-description">
             <div class="container">
-                <div class="collection-description__text">
+                <div class="collection-description__text" data-aos="fade-right" data-aos-duration="1500">
                     <p>
                         Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
                         nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam.
@@ -169,6 +165,8 @@
                                     Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia.n tempus sapien nisl, nec varius
                                     risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a.
                                 </p>
+                                <small>Grad alcoolic(%): <span>43</span></small>
+                                <small>Varsta: <span>10</span></small>
                             </div>
                         </div>
                         <div class="slider-product__slide">
