--- a/Calarasi/product-single.html
+++ b/Calarasi/product-single.html
@@ -27,10 +27,45 @@
         <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
-                <li class="menu__item"><a href="../technology.html" class="menu__link">Tehnologie</a></li>
+                <li class="menu__item">
+                    <a href="../technology.html" class="menu__link">Tehnologie</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Plantatii</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Distilare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Maturare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Cupajare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Odihna</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Turnarea in sticle</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
                 <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
-                <li class="menu__item"><a href="../product-single.html" class="menu__link">Produse</a></li>
+                <li class="menu__item">
+                    <a href="../product-single.html" class="menu__link">Produse</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item with-sublist">
+                            <a href="#" class="submenu-list__link ">DIVIN</a>
+                            <ul class="small-list">
+                                <li class="small-list__item"><a href="#">Colecția De Aur De Elită</a></li>
+                                <li class="small-list__item"><a href="#">Colecția De Aur</a></li>
+                                <li class="small-list__item"><a href="#">Status Regal</a></li>
+                                <li class="small-list__item"><a href="#">Special Collection</a></li>
+                                <li class="small-list__item"><a href="#">Aurum</a></li>
+                                <li class="small-list__item"><a href="#">Legenda</a></li>
+                                <li class="small-list__item"><a href="#">Orfeu</a></li>
+                                <li class="small-list__item"><a href="#">Legenda Mini</a></li>
+                            </ul>
+                        </li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BRANDY</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BAUTURA ALCOOLICA TARE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">RACHIU DE VIN</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">VINURI PERLANTE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">DECORATIVE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CUTIE SUVENIRE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">POCALE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CATALOGUL PRODUSELOR</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../taste.html" class="menu__link">Degustare</a></li>
                 <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
@@ -63,8 +98,8 @@
         <div class="collection-hero">
             <div class="container">
                 <div class="collection-hero__body">
-                    <img src="img/bottle.png" alt="collection" class="collection-hero__image">
-                    <div class="collection-hero__info collection-info">
+                    <img src="img/bottle.png" alt="collection" class="collection-hero__image" data-aos="fade-right" data-aos-duration="1500">
+                    <div class="collection-hero__info collection-info" data-aos="fade-left" data-aos-duration="1500">
                         <p>
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit.
@@ -95,7 +130,7 @@
 
         <div class="collection-description">
             <div class="container">
-                <div class="collection-description__text">
+                <div class="collection-description__text" data-aos="fade-right" data-aos-duration="1500">
                     <p>
                         Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
                         nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam.
@@ -114,74 +149,6 @@
             </div>
         </div>
 
-        <div class="page__product-slider product-slider">
-            <h2 class="product-slider__title">Other Products</h2>
-            <div class="product-slider__body">
-                <div class="product-slider__slider product-container">
-                    <div class="slider-product__body swiper">
-                        <div class="slider-product__slide">
-                            <img src="img/7year.jpg" alt="product">
-                            <div class="product-description">
-                                <h5>DIVIN 7 Ani</h5>
-                                <p>
-                                    Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia.n tempus sapien nisl, nec varius
-                                    risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="slider-product__slide">
-                            <img src="img/7year.jpg" alt="product">
-                            <div class="product-description">
-                                <h5>DIVIN 10 Ani</h5>
-                                <p>
-                                    Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia.n tempus sapien nisl, nec varius
-                                    risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="slider-product__slide">
-                            <img src="img/7year.jpg" alt="product">
-                            <div class="product-description">
-                                <h5>DIVIN 5 Ani</h5>
-                                <p>
-                                    Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia.n tempus sapien nisl, nec varius
-                                    risus tristique a. venenatis tincidunt nibh, sit amet fringilla augue malesuada a.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="slider-product-controls">
-                        <div class="slider-product-controls__arrows slider-arrows">
-                            <button type="button" class="slider-arrow slider-arrow__prev">
-                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0)">
-                                        <path d="M18.0778 21L19.3816 19.9084L8.21749 10.5L19.3816 1.09155L18.0778 -9.5742e-08L5.6185 10.5L18.0778 21Z" fill="#423831"/>
-                                    </g>
-                                    <defs>
-                                        <clipPath id="clip0">
-                                            <rect width="25" height="25" fill="white" transform="translate(25 25) rotate(-180)"/>
-                                        </clipPath>
-                                    </defs>
-                                </svg>
-                            </button>
-                            <button type="button" class="slider-arrow slider-arrow__next">
-                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip1)">
-                                        <path d="M18.0778 21L19.3816 19.9084L8.21749 10.5L19.3816 1.09155L18.0778 -9.5742e-08L5.6185 10.5L18.0778 21Z" fill="#423831"/>
-                                    </g>
-                                    <defs>
-                                        <clipPath id="clip1">
-                                            <rect width="25" height="25" fill="white" transform="translate(25 25) rotate(180)"/>
-                                        </clipPath>
-                                    </defs>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="page__gallery-slider gallery-slider">
     <div class="gallery-slider__body">
