--- a/Calarasi/taste.html
+++ b/Calarasi/taste.html
@@ -26,10 +26,45 @@
         <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
-                <li class="menu__item"><a href="../technology.html" class="menu__link">Tehnologie</a></li>
+                <li class="menu__item">
+                    <a href="../technology.html" class="menu__link">Tehnologie</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Plantatii</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Distilare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Maturare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Cupajare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Odihna</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Turnarea in sticle</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
                 <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
-                <li class="menu__item"><a href="../product-single.html" class="menu__link">Produse</a></li>
+                <li class="menu__item">
+                    <a href="../product-single.html" class="menu__link">Produse</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item with-sublist">
+                            <a href="#" class="submenu-list__link ">DIVIN</a>
+                            <ul class="small-list">
+                                <li class="small-list__item"><a href="#">Colecția De Aur De Elită</a></li>
+                                <li class="small-list__item"><a href="#">Colecția De Aur</a></li>
+                                <li class="small-list__item"><a href="#">Status Regal</a></li>
+                                <li class="small-list__item"><a href="#">Special Collection</a></li>
+                                <li class="small-list__item"><a href="#">Aurum</a></li>
+                                <li class="small-list__item"><a href="#">Legenda</a></li>
+                                <li class="small-list__item"><a href="#">Orfeu</a></li>
+                                <li class="small-list__item"><a href="#">Legenda Mini</a></li>
+                            </ul>
+                        </li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BRANDY</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BAUTURA ALCOOLICA TARE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">RACHIU DE VIN</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">VINURI PERLANTE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">DECORATIVE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CUTIE SUVENIRE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">POCALE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CATALOGUL PRODUSELOR</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../taste.html" class="menu__link">Degustare</a></li>
                 <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
@@ -63,18 +98,18 @@
 </div>
         <div class="taste">
             <div class="container">
-                <h1 class="taste-title">
+                <h1 class="taste-title" data-aos="fade-in" data-aos-duration="1500">
                     About our tasting tours
                 </h1>
-                <p class="taste-subtitle">
+                <p class="taste-subtitle" data-aos="fade-in" data-aos-duration="1500">
                     Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. . Laborum
                     magna nulla duis ullamco cillum dolor. Voluptate exercitation aliquip deserunt reprehenderit elit laborum.
                 </p>
 
                 <div class="taste-descr">
                     <div class="taste-descr__block">
-                        <img src="img/taste1.jpg" alt="">
-                        <div class="descr-block__info">
+                        <img src="img/taste1.jpg" alt="" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="descr-block__info" data-aos="fade-left" data-aos-duration="1500">
                             <p>Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation
                                 incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. <br> Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum.
                                 Nulla Lorem mollit cupidatat irure magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate
@@ -84,8 +119,8 @@
                         </div>
                     </div>
                     <div class="taste-descr__block invers">
-                        <img src="img/taste2.jpg" alt="">
-                        <div class="descr-block__info">
+                        <img src="img/taste2.jpg" alt="" data-aos="fade-left" data-aos-duration="1500">
+                        <div class="descr-block__info" data-aos="fade-right" data-aos-duration="1500">
                             <p>Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis
                                 ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat <br> cillum dolor. Vorit elit laborum.co cillum dolor. Voluptate exercitation incididunt
                                 aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor.
@@ -97,10 +132,10 @@
         </div>
 
         <div class="taste-form__header" style="background:url(img/taste-form.jpg) 50% 50%/ cover no-repeat;">
-            <h2 class="page-title center">Participa la o degustare</h2>
+            <h2 class="page-title center" data-aos="fade-in" data-aos-duration="1500">Participa la o degustare</h2>
         </div>
 
-        <div class="taste-form__body">
+        <div class="taste-form__body" >
             <form class="taste-form" action="#">
                 <label class="form-body__lable">
                         First name
