--- a/Calarasi/about.html
+++ b/Calarasi/about.html
@@ -27,10 +27,45 @@
         <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
-                <li class="menu__item"><a href="../technology.html" class="menu__link">Tehnologie</a></li>
+                <li class="menu__item">
+                    <a href="../technology.html" class="menu__link">Tehnologie</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Plantatii</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Distilare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Maturare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Cupajare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Odihna</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Turnarea in sticle</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
                 <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
-                <li class="menu__item"><a href="../product-single.html" class="menu__link">Produse</a></li>
+                <li class="menu__item">
+                    <a href="../product-single.html" class="menu__link">Produse</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item with-sublist">
+                            <a href="#" class="submenu-list__link ">DIVIN</a>
+                            <ul class="small-list">
+                                <li class="small-list__item"><a href="#">Colecția De Aur De Elită</a></li>
+                                <li class="small-list__item"><a href="#">Colecția De Aur</a></li>
+                                <li class="small-list__item"><a href="#">Status Regal</a></li>
+                                <li class="small-list__item"><a href="#">Special Collection</a></li>
+                                <li class="small-list__item"><a href="#">Aurum</a></li>
+                                <li class="small-list__item"><a href="#">Legenda</a></li>
+                                <li class="small-list__item"><a href="#">Orfeu</a></li>
+                                <li class="small-list__item"><a href="#">Legenda Mini</a></li>
+                            </ul>
+                        </li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BRANDY</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BAUTURA ALCOOLICA TARE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">RACHIU DE VIN</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">VINURI PERLANTE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">DECORATIVE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CUTIE SUVENIRE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">POCALE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CATALOGUL PRODUSELOR</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../taste.html" class="menu__link">Degustare</a></li>
                 <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
@@ -66,7 +101,7 @@
 
         <section class="about-section">
             <div class="container">
-                <div class="about-section__header section-header">
+                <div class="about-section__header section-header" data-aos="fade-in" data-aos-duration="1500">
                     <h2>Despre noi</h2>
                     <p>
                         Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. . Laborum
@@ -74,15 +109,15 @@
                     </p>
                 </div>
                 <div class="about-section__body">
-                    <div class="about-section__item">
+                    <div class="about-section__item" data-aos="fade-right" data-aos-duration="3000">
                         <h3>1896</h3>
                         <p>Este fondată fabrica de vinuri si divinuri Călărași Divin</p>
                     </div>
-                    <div class="about-section__item">
+                    <div class="about-section__item" data-aos="fade-right" data-aos-duration="2000">
                         <h3>600+ ha</h3>
                         <p>Suprafața plantațiilor de viță de vie este de cca 600 ha, pe care se cultivă 10 soiuri de struguri</p>
                     </div>
-                    <div class="about-section__item">
+                    <div class="about-section__item" data-aos="fade-right" data-aos-duration="1500">
                         <h3>30+</h3>
                         <p>Peste 30 de filiale Calarasi-Divin deschise in RM</p>
                     </div>
@@ -94,8 +129,8 @@
             <div class="container">
                 <div class="about-description__body">
                     <div class="about-description__item">
-                        <img src="img/process.jpg" alt="#">
-                        <div class="about-description__text">
+                        <img src="img/process.jpg" alt="#" data-aos="fade-right" data-aos-duration="1500">
+                        <div class="about-description__text" data-aos="fade-left" data-aos-duration="1500">
                             <p>
                                 Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip
                                 deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat
@@ -106,8 +141,8 @@
                         </div>
                     </div>
                     <div class="about-description__item">
-                        <img src="img/process.jpg" alt="#">
-                        <div class="about-description__text">
+                        <img src="img/process.jpg" alt="#" data-aos="fade-left" data-aos-duration="1500">
+                        <div class="about-description__text" data-aos="fade-right" data-aos-duration="1500">
                             <p>
                                 Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate
                                 exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat
@@ -124,7 +159,7 @@
 
         <section class="history">
             <div class="container">
-                <div class="history__header section-header">
+                <div class="history__header section-header" data-aos="fade-in" data-aos-duration="1500">
                     <h2>Our history</h2>
                     <p>
                         Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. . Laborum
@@ -132,10 +167,10 @@
                     </p>
                 </div>
             </div>
-            <div class="page__history-slider history-slider">
+            <div class="page__history-slider history-slider" >
                 <div class="history-slider__body">
                     <div class="history-slider__slider">
-                        <div class="slider-history__body swiper">
+                        <div class="slider-history__body swiper" data-aos="fade-right" data-aos-duration="1500">
                             <div class="slider-history__slide">
                                 <div class="slide-text">
                                     <h3>1896</h3>
@@ -224,9 +259,9 @@
         <div class="about-mini">
             <div class="container">
                 <div class="about-mini__body">
-                    <img src="img/about-mini.jpg" alt="about">
+                    <img src="img/about-mini.jpg" alt="about" data-aos="fade-up-right" data-aos-duration="1500">
 
-                    <div class="about-mini__description">
+                    <div class="about-mini__description" data-aos="fade-up-left" data-aos-duration="1500">
                         <p>
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                             officia consequat duis enim velit mollit.
