--- a/Calarasi/blog.html
+++ b/Calarasi/blog.html
@@ -25,10 +25,45 @@
         <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
-                <li class="menu__item"><a href="../technology.html" class="menu__link">Tehnologie</a></li>
+                <li class="menu__item">
+                    <a href="../technology.html" class="menu__link">Tehnologie</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Plantatii</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Distilare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Maturare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Cupajare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Odihna</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Turnarea in sticle</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
                 <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
-                <li class="menu__item"><a href="../product-single.html" class="menu__link">Produse</a></li>
+                <li class="menu__item">
+                    <a href="../product-single.html" class="menu__link">Produse</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item with-sublist">
+                            <a href="#" class="submenu-list__link ">DIVIN</a>
+                            <ul class="small-list">
+                                <li class="small-list__item"><a href="#">Colecția De Aur De Elită</a></li>
+                                <li class="small-list__item"><a href="#">Colecția De Aur</a></li>
+                                <li class="small-list__item"><a href="#">Status Regal</a></li>
+                                <li class="small-list__item"><a href="#">Special Collection</a></li>
+                                <li class="small-list__item"><a href="#">Aurum</a></li>
+                                <li class="small-list__item"><a href="#">Legenda</a></li>
+                                <li class="small-list__item"><a href="#">Orfeu</a></li>
+                                <li class="small-list__item"><a href="#">Legenda Mini</a></li>
+                            </ul>
+                        </li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BRANDY</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BAUTURA ALCOOLICA TARE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">RACHIU DE VIN</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">VINURI PERLANTE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">DECORATIVE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CUTIE SUVENIRE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">POCALE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CATALOGUL PRODUSELOR</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../taste.html" class="menu__link">Degustare</a></li>
                 <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
@@ -68,9 +103,9 @@
                     <h2>Blog</h2>
                 </div>
                 <div class="blog-section__grid">
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-right" data-aos-duration="1000">
                         <img src="img/post1.jpg" alt="post" class="blog-item__thumbnail">
-                        <div class="blog-item__text">
+                        <div class="blog-item__text" >
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
                             <p class="blog-item__excerpt">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum...</p>
                             <div class="blog-item__meta">
@@ -79,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-left" data-aos-duration="1000">
                         <img src="img/post2.jpg" alt="post" class="blog-item__thumbnail">
                         <div class="blog-item__text">
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
@@ -90,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-right" data-aos-duration="1000">
                         <img src="img/post2.jpg" alt="post" class="blog-item__thumbnail">
                         <div class="blog-item__text">
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
@@ -101,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog-section__item blog-item">
+                    <div class="blog-section__item blog-item" data-aos="fade-up-left" data-aos-duration="1000">
                         <img src="img/post1.jpg" alt="post" class="blog-item__thumbnail">
                         <div class="blog-item__text">
                             <h3 class="blog-item__title">Lorem ipsum dolor asamet</h3>
