--- a/Calarasi/technology.html
+++ b/Calarasi/technology.html
@@ -27,10 +27,45 @@
         <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
-                <li class="menu__item"><a href="../technology.html" class="menu__link">Tehnologie</a></li>
+                <li class="menu__item">
+                    <a href="../technology.html" class="menu__link">Tehnologie</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Plantatii</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Distilare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Maturare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Cupajare</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Odihna</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">Turnarea in sticle</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
                 <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
-                <li class="menu__item"><a href="../product-single.html" class="menu__link">Produse</a></li>
+                <li class="menu__item">
+                    <a href="../product-single.html" class="menu__link">Produse</a>
+                    <ul class="submenu-list">
+                        <li class="submenu-list__item with-sublist">
+                            <a href="#" class="submenu-list__link ">DIVIN</a>
+                            <ul class="small-list">
+                                <li class="small-list__item"><a href="#">Colecția De Aur De Elită</a></li>
+                                <li class="small-list__item"><a href="#">Colecția De Aur</a></li>
+                                <li class="small-list__item"><a href="#">Status Regal</a></li>
+                                <li class="small-list__item"><a href="#">Special Collection</a></li>
+                                <li class="small-list__item"><a href="#">Aurum</a></li>
+                                <li class="small-list__item"><a href="#">Legenda</a></li>
+                                <li class="small-list__item"><a href="#">Orfeu</a></li>
+                                <li class="small-list__item"><a href="#">Legenda Mini</a></li>
+                            </ul>
+                        </li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BRANDY</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">BAUTURA ALCOOLICA TARE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">RACHIU DE VIN</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">VINURI PERLANTE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">DECORATIVE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CUTIE SUVENIRE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">POCALE</a></li>
+                        <li class="submenu-list__item"><a href="#" class="submenu-list__link">CATALOGUL PRODUSELOR</a></li>
+                    </ul>
+                </li>
                 <li class="menu__item"><a href="../taste.html" class="menu__link">Degustare</a></li>
                 <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
@@ -78,13 +113,11 @@
         </div>
         <div class="technology-main">
             <div class="technology-title" id="plantatii" style="background: url('/img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Plantații
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Plantații</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -94,7 +127,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -104,7 +137,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -116,14 +149,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="distilare" style="background: url('/img/tec-post-header1.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Distilare
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Distilare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -133,7 +165,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post5.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -143,7 +175,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post6.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -155,14 +187,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="maturare" style="background: url('/img/tec-post-header2.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Maturare    
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Maturare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -172,7 +203,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post5.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -182,7 +213,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post-big1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -194,14 +225,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="cupajare" style="background: url('/img/tec-post-header3.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Cupajare
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Cupajare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -211,7 +241,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -221,7 +251,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -233,14 +263,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="odihna" style="background: url('/img/tec-post-header4.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Odihna
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Odihna</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -250,7 +279,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -260,7 +289,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -272,14 +301,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="technology-title" id="distilare" style="background: url('/img/tec-post-header4.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Distilare
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Distilare</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -289,7 +317,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -299,7 +327,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -312,13 +340,11 @@
                 </div>
             </div>
             <div class="technology-title" id="turnarea" style="background: url('/img/tec-post-header1.jpg') 50% 50% / cover no-repeat;">
-                <h2>
-                    Turnarea in sticle
-                </h2>
+                <h2 data-aos="zoom-in" data-aos-duration="1500">Turnarea in sticle</h2>
             </div>
             <div class="technology-posts">
                 <div class="technology-posts__grid">
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-up" data-aos-duration="1500">
                         <img src="img/tec-post1.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -328,7 +354,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-down" data-aos-duration="1500">
                         <img src="img/tec-post2.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -338,7 +364,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="technology-post">
+                    <div class="technology-post" data-aos="fade-right" data-aos-duration="1500">
                         <img src="img/tec-post3.jpg" alt="">
                         <div class="technology-post__content">
                             <h3>Lorem ipsum dolor</h3>
@@ -352,6 +378,10 @@
             </div>
         </div>
     </main>
+
+    <!-- <button class="to-top">
+        <img src="img/chevron-up-solid.svg" alt="">
+    </button> -->
 
     <footer class="footer" data-aos="fade-up" data-aos-duration="2000">
     <div class="container footer__container">
